#
# ParaStation
#
# Copyright (C) 2012 ParTec Cluster Competence Center GmbH, Munich
#
# This file may be distributed under the terms of the Q Public License
# as defined in the file LICENSE.QPL included in the packaging of this
# file.
#
# Author:       Thomas Moschny <moschny@par-tec.com>
#
include $(top_srcdir)/common.am

EXTRA_DIST = README_any_source_receives.txt bcast.txt p4stat.txt	\
	p4tcp.txt
man_MANS = p4stat.8 p4tcp.8
CLEANFILES = p4stat.8 p4tcp.8
