#
# ParaStation
#
# Copyright (C) 2012 ParTec Cluster Competence Center GmbH, Munich
#
# This file may be distributed under the terms of the Q Public License
# as defined in the file LICENSE.QPL included in the packaging of this
# file.
#
# Author:       Thomas Moschny <moschny@par-tec.com>
#
include $(top_srcdir)/common.am

include_HEADERS = pscom.h psport4.h
noinst_HEADERS = gm_compat.h p4io.h p4log.h p4sockets.h psockt.h	\
	ps_perf.h
